Eventually fixed ArrayIndexOutOfBoundsException.